ci/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-test-ssl
  namespace: test
  annotations:
    spec.ingressClassName: traefik
    #kubernetes.io/tls-acme: "true"
    #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:xxxx
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    #cert-manager.io/cluster-issuer: zerossl-clusterissuer
spec:
  tls:
    - hosts:
      - test8.neogiciel.net
      #secretName: hello-app-tls
      secretName: test8-tls
  rules:
    - host: test8.neogiciel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-test-ssl
                port:
                  number: 8080
